tests/NormalTests/paczka1/small_fuzzy/92259757.err
Error in line 8: TG2nBXLAsmd S8 76,4
Error in line 13: TG2nBXLAsmd S752 26,2
